# SIGGRAPH-2026-Two-Phase-IGKS

./: .gitignore  CMakeLists.txt  LICENSE  README.md  pyproject.toml
IGKS_TP/: Binding.cu  CMakeLists.txt  Main.py  Simulator.hpp
IGKS_TP/Simulator/: AllocAndInit.cu  ApplySource.cu  Config.cu  SimulateOneStep.cu  Status.cu
Misc/: .gitignore  Base.hpp  Binding.py.in  CMakeLists.txt  CartesianInterface.hpp  Colormap.hpp  Colormap.py  Config.hpp  Launcher.cuh  Layout.hpp  MDView.hpp  MaxwellBoltzmannDistribution.hpp
